--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,209 @@
+@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap');
+
 * {
-    margin: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-  }
+  margin: 0;
+  box-sizing: border-box;
   
-  main {
-    padding: 3rem;
-    background-color: black;
-    color: white;
-    height: 100vh;
-  }
+}
+
+body {
+  background-color: #424349;
+  background-size: contain;
+  color: white;
+  height: 100vh;
+  font-family: 'Mochiy Pop P One', sans-serif;
   
-  h1 {
-    font-size: 3rem;
-    margin-bottom: 3rem;
-  }
+}
+
+img {
+  border-radius: 100%;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.383);
+  text-align: center;
+}
+
+#conteudo {
+  display: flex;
+  align-items: center;
   
-  .flex {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+}
+
+#conteudo main {
+  width: 100%;
+}
+
+#flex1 {
+  display: flex;
+  flex-direction: column;
+  padding: 50px;
+  align-items: flex-start;
+  position:static; 
+  margin: 0 0 0 130px;
+}
+
+#form {
+  display: flex;
+  border-radius: 10px;
+  flex-direction: column;
+  padding: 10px;
+  align-items: center;
+}
+
+.font1 {
+  font-size: 40px;
+  color: #eaede6;
+}
+
+#font2 {
+  font-size: 65px;
+  color: #eaede6;
+}
+
+#font3 {
+  font-size: 30px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  padding: 5px;
+  color: #eaede6;
+}
+
+#font4 {
+  font-size: 18px;
+  padding: 5px;
+  color: #eaede6;
+}
+
+.font5 {
+  display: flex;
+  flex-direction: column;
+  font-size: 24px;
+  font-family: "Roboto", sans-serif;
+  font-weight:bold;
+  line-height: 0;
+  padding: 15px;
+  color: #eaede6;
+  align-items: center;
   
-  .button {
-    margin: 0.7rem;
-    margin-bottom: 3rem;
-    padding: 0.8rem;
-    width: 8rem;
-    background-color:  white;
-    color: black;
-    border: 0;
-    border-radius: 1rem;
-    font-size: 1rem;
-    font-weight: 500;
-  }
+}
+
+#font6 {
+  font-size: 15px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  padding: 50px;
+  color: #eaede6;
+  align-items: initial;
+}
+
+.font7 {
+  font-size: 15px;
+  font-family: "Roboto", sans-serif;
+  font-weight:bold;
+  line-height: 0;
+  padding: 15px;
+  color: #eaede6;
+  display: flex;
+  flex-direction: grid; 
+  width: 385px;
+  position:initial;
+  align-items: center;
+}
+
+.font-footer {
+  font-size: 30px;
+  color: #eaede6;
+  display: flex;
+  align-items: center;
+  display: flex;
+  flex-direction:inherit
+}
+
+
+
+h1 {
+  font-size: 3rem;
+  align-items: center;
+}
+
+h2 {
+  font: 2rem;
+  padding: 40px;
+}
+
+input {
+  padding: 15px;
+  border-radius: 8px;
+  margin: 18px;
+}
+
+#botao-postar {
+  color: rgb(235, 251, 0);
+  background-color: #0407c7;
+  width: 340px;
+  transition: 0.5s;
+  height: 60px;
+  margin-top: 20px;
+  border-radius: 10px;
+  font-size: 22px;
+}
+
+#botao-postar:hover {
+  background-color: #f1e210;
+  color: #020202;
+  font-style: oblique;
+  transition: 0.5s;
+}
+
+
+#postagem {
+  display: flex;
+  gap: 12px;
+  flex-wrap: wrap;
+  text-align: center;
   
-  input[type='text'] {
-    height: 2rem;
-    margin: 0.7rem;
-    border: 0;
-    border-radius: 0.5rem;
-  }
+}
+
+#postagem div {
+  display: flex;
+  background: #a41515;
+  border-radius: 12px;  
+  flex-direction: column;
+}
+
+#postagem h3 {
+  align-items: center;
+  color: #ffffff;
+  font-size: 55px;
+
+}
+
+#postagem span {
+  color: #ffffff;
+  align-items: center;
+  font-size: 35px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+}
+
+#postagem img {
+  height: 350px;
+  width: 350px;
+  
+}
+
+#fieldset1 {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column; 
+  width: 400px;
+}
+
+#footer p {
+  display: flex;
+  align-items: center;
+  padding: 30px;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+  flex-direction: column;
+  font-size: 18px;
+
+}
