--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,14 @@
 * {
   margin: 0;
   box-sizing: border-box;
-  
 }
 
 body {
-  background-color: #424349;
+  background-color:#334756;
   background-size: contain;
   color: white;
   height: 100vh;
-  font-family: 'Mochiy Pop P One', sans-serif;
-  
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 img {
@@ -24,7 +22,6 @@ img {
 #conteudo {
   display: flex;
   align-items: center;
-  
 }
 
 #conteudo main {
@@ -50,7 +47,7 @@ img {
 
 .font1 {
   font-size: 40px;
-  color: #eaede6;
+  color: #F0A500;
 }
 
 #font2 {
@@ -60,7 +57,7 @@ img {
 
 #font3 {
   font-size: 30px;
-  font-family: "Roboto", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 900;
   padding: 5px;
   color: #eaede6;
@@ -76,18 +73,17 @@ img {
   display: flex;
   flex-direction: column;
   font-size: 24px;
-  font-family: "Roboto", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight:bold;
   line-height: 0;
   padding: 15px;
   color: #eaede6;
   align-items: center;
-  
 }
 
 #font6 {
   font-size: 15px;
-  font-family: "Roboto", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 900;
   padding: 50px;
   color: #eaede6;
@@ -96,7 +92,7 @@ img {
 
 .font7 {
   font-size: 15px;
-  font-family: "Roboto", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight:bold;
   line-height: 0;
   padding: 15px;
@@ -117,11 +113,10 @@ img {
   flex-direction:inherit
 }
 
-
-
 h1 {
   font-size: 3rem;
   align-items: center;
+  padding-left: 50px;
 }
 
 h2 {
@@ -136,8 +131,9 @@ input {
 }
 
 #botao-postar {
-  color: rgb(235, 251, 0);
-  background-color: #0407c7;
+  color:white;
+  background-color:#F0A500; 
+  font-weight: bold;
   width: 340px;
   transition: 0.5s;
   height: 60px;
@@ -147,47 +143,44 @@ input {
 }
 
 #botao-postar:hover {
-  background-color: #f1e210;
-  color: #020202;
-  font-style: oblique;
+  background-color: #082032;
+  color: white;
   transition: 0.5s;
 }
-
 
 #postagem {
   display: flex;
   gap: 12px;
   flex-wrap: wrap;
   text-align: center;
-  
 }
 
 #postagem div {
   display: flex;
-  background: #a41515;
+  background:#F0A500;
   border-radius: 12px;  
   flex-direction: column;
+  margin-right: 50px;
 }
 
 #postagem h3 {
   align-items: center;
   color: #ffffff;
-  font-size: 55px;
-
+  font-size: 30px;
 }
 
 #postagem span {
   color: #ffffff;
   align-items: center;
-  font-size: 35px;
-  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
 }
 
 #postagem img {
   height: 350px;
   width: 350px;
-  
+  margin-left: 150px;
 }
 
 #fieldset1 {
@@ -201,9 +194,7 @@ input {
   display: flex;
   align-items: center;
   padding: 30px;
-  font-weight: bold;
-  font-family: "Roboto", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   flex-direction: column;
-  font-size: 18px;
-
+  font-size: 15px;
 }
